# pless-for-coding

./: .gitignore  .gitmodules  CLAUDE.md  README.md  compare_pass_at_k.py  debug_generation.py  full_run_base_models_mbpp.sh  full_run_qwen.sh  monitor_sync_qwen.sh  pyproject.toml  run_bench.sh  run_bigcode_mbpp_oci13b_instruct_rerun.sh  run_bigcode_mbpp_oci13b_rerun.sh  run_bigcode_mbpp_opencodeinterpreter13b.sh  run_bigcode_mbpp_qwen25coder15b.sh  run_bigcode_mbpp_qwen25coder3b.sh  run_bs_ablation_mbpp_qwen.sh  run_humaneval.py  run_new_samplers_mbpp.sh  run_ns0_ablation_mbpp_qwen.sh  run_paper_stochastic_mbpp.sh  run_pless_humaneval_all_models.sh  run_pless_instruct_t1_mbpp.sh  run_pless_posttemp_mbpp.sh  run_pure_temp_rerun_mbpp.sh  run_split_decoding_mbpp.sh  run_split_decoding_sweep_mbpp.sh  run_top_p_humaneval_all_models.sh  run_top_p_mbpp_all_models.sh  test_oci_mps.py
bench/: checkpointing.py  generator.py  models.py  prompts.py  runner.py  sampler_bridge.py
bench/eval/: __init__.py  __main__.py  compare_with_2507.py  compare_with_paper.py  compare_with_paper_qwen.py  consolidated_eval.py  curate_examples.py  eval_full_mbpp.py  eval_full_precision_humaneval.py  eval_temperature_sweep.py  (+14 more)
docs/: audit_metrics_and_results.md  decoding_landscape_research.md  diversity_metrics.md  mbpp_insights.md
tests/: test_cli_integration.py  test_compare_with_paper.py  test_curate_examples.py  test_executor.py  test_fingerprint.py  test_generator_top_p.py  test_loader.py  test_metrics.py  test_parse_humaneval.py  test_plots.py  test_runner_top_p.py  test_sampler_bridge.py
(+919 files in other folders)
