[project]
name = "pless-for-coding"
version = "0.1.0"
description = "Benchmark pless samplers on MBPP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4",
    "transformers>=5",
    "datasets",
    "tqdm",
    "accelerate",
    "hf-transfer>=0.1.9",
    "numpy",
    "human-eval",
    "matplotlib",
    "tiktoken",
    "einops",
    "zss",
    "sentencepiece",
    "transformers-stream-generator",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

